[tool.poetry]
name = "temporal-tutorial"
version = "0.1.0"
description = ""
authors = ["Julien Cartigny <julien.cartigny@teamgrow.info>"]
readme = "README.md"
packages = [{include = "temporal_tutorial"}]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dependencies]
python = "^3.11"
temporalio = "^1.3.0"
opentelemetry-api = "^1.19.0"
opentelemetry-sdk = "^1.19.0"

[tool.poetry.group.dev.dependencies]
commitizen = "^3.6.0"
pre-commit = "^3.3.3"

[tool.poetry.group.test.dependencies]
pytest = "^7.4.0"
pytest-black = "^0.3.12"

[tool.commitizen]
name = "cz_conventional_commits"
tag_format = "$version"
version_scheme = "pep440"
version_provider = "poetry"
update_changelog_on_bump = true
major_version_zero = true
